DuPont DevSB/src/objects/Additional_Note_Comment__c.object
<CustomObject>
    <description>Additional Notes &amp; Comments</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Item</description>
        <label>Item</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Status Report</description>
        <label>Status Report</label>
        <referenceTo>Status_Report__c</referenceTo>
        <relationshipName>R00N80000002QnvxEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Note &amp; Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Additional Notes &amp; Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Notes &amp; Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>